--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 <body>
 <h1>Carrier Management</h1>
 <ul>
+	<li><%= link_to 'Home', root_path %></li>
 	<li><%= link_to 'Carriers', carriers_path %></li>
+	<li><%= link_to 'Locations', locations_path %></li>
 </ul>
 <%= yield %>
 
