--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,13 +1,12 @@
 <h2>Locations</h2>
 <%= link_to 'New Location', new_location_path %>
-<table>
+<table class="table table-striped">
 	<tr>
 		<th>Name</th>
 		<th>City</th>
 		<th>State</th>
 		<th></th>
-		<th></th>
-		<th></th>
+
 	</tr>
 
 	<% @locations.each do |location| %>
@@ -15,9 +14,9 @@
 			<td><%= location.name %></td>
 			<td><%= location.city %></td>
 			<td><%= location.state %></td>
-			<td><%= link_to 'Show', location %></td>
-			<td><%= link_to 'Edit', edit_location_path(location) %></td>
-			<td><%= link_to 'Delete', location_path(location), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			<td><%= link_to 'Show', location %> | 
+				<%= link_to 'Edit', edit_location_path(location) %> |
+				<%= link_to 'Delete', location_path(location), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 		</tr>
 	<% end %>
 </table>
