--- a/app/views/origin_destination_pairs/_form.html.erb
+++ b/app/views/origin_destination_pairs/_form.html.erb
@@ -1,31 +1,8 @@
-<%= form_for @location do |f| %>
-	<% if @location.errors.any? %>
-	<div id="error_explanation">
-		<h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
-		<ul>
-		<% @location.errors.full_messages.each do |msg| %>
-			<li><%= msg %></li>
-		<% end %>
-		</ul>
+<%= simple_form_for @origin_destination_pair do |f| %>
+	<%= f.input :origin_id, collection: @locations %>	
+	<%= f.input :destination_id, collection: @locations %>	
+	<br>
+	<div class="form-actions">
+		<%= f.button :submit, :class => "btn btn-primary" %>
 	</div>
-	<% end %>
-	
-	<p>
-		<%= f.label :name %><br>
-		<%= f.text_field :name %>
-	</p>
-
-	<p>
-		<%= f.label :city %><br>
-		<%= f.text_field :city %>
-	</p>
-
-	<p>
-		<%= f.label :state %><br>
-		<%= f.text_field :state %>
-	</p>
-
-	<p>
-		<%= f.submit %>
-	</p>
 <% end %>
