rates model, controller, views

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,3 +2,4 @@
 <li><%= link_to 'Carriers', carriers_path %></li>
 <li><%= link_to 'Locations', locations_path %></li>
 <li><%= link_to 'Origin and Destination Pairs', origin_destination_pairs_path %></li>
+<li><%= link_to 'Rates', rates_path %></li>
